<resources>
    <string name="app_name">PostCommentSample</string>
    <string name="title">Title:</string>
    <string name="body">Body:</string>
    <string name="post">Posts Listing</string>
    <string name="comment">Comments Listing</string>
    <string name="all_posts">All Posts</string>
    <string name="post_author">Post Author:</string>
    <string name="id">ID:</string>
    <string name="all_comments">All Comments</string>
    <string name="no_post_found">No Post Found!</string>
    <string name="no_comments_found">No Comments Found!</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet">No Internet Connectivity!</string>
    <string name="error_occurred">Error Occurred!</string>
    <string name="retry_button">Retry</string>
</resources>